fix data dont display

--- a/src/i18n/ar/common.json
+++ b/src/i18n/ar/common.json
@@ -17,6 +17,7 @@
   "webDesignAndDevelopment": "تصميم وتطوير المواقع",
   "viewPortfolio": "عرض الأعمال",
   "freeConsultation": "استشارة مجانية",
+  "comingSoon": "قريباً",
   "allServices": "جميع الخدمات",
   "viewDetails": "عرض التفاصيل",
   "sendRequest": "إرسال طلب",
