--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -16,6 +16,7 @@
   "webDesignAndDevelopment": "Web Design & Development",
   "viewPortfolio": "View Portfolio",
   "freeConsultation": "Free Consultation",
+  "comingSoon": "Coming Soon",
   "allServices": "All Services",
   "viewDetails": "View Details",
   "sendRequest": "Send Request",
