--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -16,6 +16,7 @@
   "webDesignAndDevelopment": "طراحی و توسعه وب",
   "viewPortfolio": "مشاهده نمونه کارها",
   "freeConsultation": "مشاوره رایگان",
+  "comingSoon": "به زودی",
   "allServices": "همه خدمات",
   "viewDetails": "مشاهده جزئیات",
   "sendRequest": "ارسال درخواست",
