--- a/src/i18n/fa/contact.json
+++ b/src/i18n/fa/contact.json
@@ -18,9 +18,11 @@
   "address": "آدرس",
   "addressValue": "خیابان آزادی، بلوار کشاورز، پلاک ۱۲۳، تهران، ایران",
   "phone": "تلفن",
-  "phoneValue": "۰۲۱-۱۲۳۴۵۶۷۸",
+  "phoneValue": "۰۹۱۲۵۸۱۱۸۸۰",
   "email": "ایمیل",
   "emailValue": "info@webabc.ir",
+  "whatsapp": "واتس‌اپ",
+  "callNow": "تماس بگیرید",
   "consultation": {
     "title": "درخواست مشاوره رایگان",
     "description": "فرم زیر را پر کنید و کارشناسان ما به زودی با شما تماس خواهند گرفت.",
