--- a/src/i18n/en/contact.json
+++ b/src/i18n/en/contact.json
@@ -18,9 +18,11 @@
   "address": "Address",
   "addressValue": "123 Main St, Suite 500, New York, NY 10001, USA",
   "phone": "Phone",
-  "phoneValue": "+1 (555) 123-4567",
+  "phoneValue": "+98 912 581 1880",
   "email": "Email",
   "emailValue": "info@webabc.ir",
+  "whatsapp": "WhatsApp",
+  "callNow": "Call Now",
   "consultation": {
     "title": "Request Free Consultation",
     "description": "Fill in the form below and our experts will contact you shortly.",
