feat: add FAQ Schema Generator tool and translations

--- a/src/i18n/ar/tools.json
+++ b/src/i18n/ar/tools.json
@@ -26,7 +26,17 @@
   },
   "faqGenerator": {
     "title": "منشئ مخطط الأسئلة الشائعة",
-    "description": "قم بإنشاء ترميز مخطط صفحة الأسئلة الشائعة لتحسين ظهورك في البحث."
+    "description": "قم بإنشاء ترميز مخطط صفحة الأسئلة الشائعة لتحسين ظهورك في البحث.",
+    "addQuestion": "إضافة سؤال",
+    "questionLabel": "السؤال",
+    "answerLabel": "الجواب",
+    "generateSchema": "توليد المخطط",
+    "copyJson": "نسخ الكود",
+    "delete": "حذف",
+    "preview": "معاينة",
+    "schemaResult": "نتيجة المخطط",
+    "copied": "تم النسخ!",
+    "noQuestions": "أضف سؤالاً واحداً على الأقل لتوليد المخطط."
   },
   "contentCreatorsTitle": "✍️ لمنشئي المحتوى",
   "contentCreatorsDesc": "يمكن للأدوات المتخصصة في المحتوى مساعدة زوارك في إنشاء محتوى أفضل ورؤية نفسك كمورد قيم.",
