--- a/src/i18n/en/tools.json
+++ b/src/i18n/en/tools.json
@@ -26,7 +26,17 @@
   },
   "faqGenerator": {
     "title": "FAQ Schema Generator",
-    "description": "Generate FAQ Page Schema markup to improve your search visibility."
+    "description": "Generate FAQ Page Schema markup to improve your search visibility.",
+    "addQuestion": "Add Question",
+    "questionLabel": "Question",
+    "answerLabel": "Answer",
+    "generateSchema": "Generate Schema",
+    "copyJson": "Copy JSON",
+    "delete": "Delete",
+    "preview": "Preview",
+    "schemaResult": "FAQ Schema Result",
+    "copied": "Copied to clipboard!",
+    "noQuestions": "Add at least one question to generate schema."
   },
   "contentCreatorsTitle": "✍️ For Content Creators",
   "contentCreatorsDesc": "Content-focused tools can help your visitors create better content and see you as a valuable resource.",
