--- a/src/i18n/fa/tools.json
+++ b/src/i18n/fa/tools.json
@@ -26,7 +26,17 @@
   },
   "faqGenerator": {
     "title": "سازنده اسکیمای سوالات متداول",
-    "description": "تولید کدهای اسکیما برای صفحه سوالات متداول جهت بهبود نمایش در نتایج جستجو."
+    "description": "تولید کدهای اسکیما برای صفحه سوالات متداول جهت بهبود نمایش در نتایج جستجو.",
+    "addQuestion": "افزودن سوال",
+    "questionLabel": "سوال",
+    "answerLabel": "پاسخ",
+    "generateSchema": "تولید اسکیما",
+    "copyJson": "کپی کد",
+    "delete": "حذف",
+    "preview": "پیش‌نمایش",
+    "schemaResult": "نتیجه اسکیما",
+    "copied": "کپی شد!",
+    "noQuestions": "برای تولید اسکیما حداقل یک سوال اضافه کنید."
   },
   "contentCreatorsTitle": "✍️ برای سازندگان محتوا",
   "contentCreatorsDesc": "ابزارهای متمرکز بر محتوا می‌توانند به بازدیدکنندگان شما کمک کنند تا محتوای بهتری ایجاد کنند و شما را به عنوان یک منبع ارزشمند ببینند.",
