fix: adjust padding in FAQ tool, translate breadcrumbs and placeholders

--- a/src/i18n/ar/tools.json
+++ b/src/i18n/ar/tools.json
@@ -36,7 +36,8 @@
     "preview": "معاينة",
     "schemaResult": "نتيجة المخطط",
     "copied": "تم النسخ!",
-    "noQuestions": "أضف سؤالاً واحداً على الأقل لتوليد المخطط."
+    "noQuestions": "أضف سؤالاً واحداً على الأقل لتوليد المخطط.",
+    "placeholder": "// سيظهر مخطط JSON-LD هنا..."
   },
   "contentCreatorsTitle": "✍️ لمنشئي المحتوى",
   "contentCreatorsDesc": "يمكن للأدوات المتخصصة في المحتوى مساعدة زوارك في إنشاء محتوى أفضل ورؤية نفسك كمورد قيم.",
