--- a/src/i18n/fa/tools.json
+++ b/src/i18n/fa/tools.json
@@ -36,7 +36,8 @@
     "preview": "پیش‌نمایش",
     "schemaResult": "نتیجه اسکیما",
     "copied": "کپی شد!",
-    "noQuestions": "برای تولید اسکیما حداقل یک سوال اضافه کنید."
+    "noQuestions": "برای تولید اسکیما حداقل یک سوال اضافه کنید.",
+    "placeholder": "// کد اسکیمای JSON-LD اینجا نمایش داده می‌شود..."
   },
   "contentCreatorsTitle": "✍️ برای سازندگان محتوا",
   "contentCreatorsDesc": "ابزارهای متمرکز بر محتوا می‌توانند به بازدیدکنندگان شما کمک کنند تا محتوای بهتری ایجاد کنند و شما را به عنوان یک منبع ارزشمند ببینند.",
