--- a/src/i18n/ar/tools.json
+++ b/src/i18n/ar/tools.json
@@ -4,55 +4,8 @@
   "description": "عزز استراتيجية التسويق الرقمي الخاصة بك مع مجموعتنا الشاملة من الأدوات المجانية عبر الإنترنت. من تحسين تحسين محركات البحث إلى إنشاء المحتوى، لدينا كل ما تحتاجه.",
   "seoMarketersTitle": "📈 لمتخصصي تحسين محركات البحث والتسويق الرقمي",
   "seoMarketersDesc": "ستجذب هذه الأدوات المستخدمين الذين يبحثون عن تحسين أداء موقعهم في محركات البحث.",
-  "serpPreview": {
-    "title": "أداة معاينة مقتطف نتائج البحث",
-    "description": "تظهر معاينة لكيفية ظهور صفحة ويب في نتائج بحث جوجل. أدخل علامة العنوان، وصف Meta، وURL الخاص بك لتحسين مقتطفاتك للحصول على معدلات نقر أعلى."
-  },
-  "metaGenerator": {
-    "title": "مولد علامات Meta",
-    "description": "نموذج بسيط يقوم بإنشاء علامات Meta (العنوان، الوصف، علامات وسائل التواصل الاجتماعي للرسوم البيانية المفتوحة) للمستخدمين لنسخها ولصقها في قسم <head> لموقعهم."
-  },
-  "paaScraper": {
-    "title": "مستخرج \"الناس أيضًا يسألون\"",
-    "description": "يأخذ كلمة مفتاحية ويستخرج قسم \"الناس أيضًا يسألون\" من نتائج بحث جوجل. هذا رائع لمنشئي المحتوى الذين يبحثون عن أفكار منشورات المدونة والإجابة على الأسئلة الشائعة للمستخدمين."
-  },
-  "utmBuilder": {
-    "title": "منشئ روابط UTM",
-    "description": "نموذج يساعد المسوقين في إنشاء روابط تحتوي على معلمات UTM لتتبع حملاتهم في جوجل أناليتيكس."
-  },
-  "keywordResearch": {
-    "title": "أداة البحث عن الكلمات الرئيسية",
-    "description": "اكتشف الكلمات الرئيسية ذات القيمة العالية لاستراتيجية تحسين محركات البحث الخاصة بك."
-  },
-  "faqGenerator": {
-    "title": "منشئ مخطط الأسئلة الشائعة",
-    "description": "قم بإنشاء ترميز مخطط صفحة الأسئلة الشائعة لتحسين ظهورك في البحث.",
-    "addQuestion": "إضافة سؤال",
-    "questionLabel": "السؤال",
-    "answerLabel": "الجواب",
-    "generateSchema": "توليد المخطط",
-    "copyJson": "نسخ الكود",
-    "delete": "حذف",
-    "preview": "معاينة",
-    "schemaResult": "نتيجة المخطط",
-    "copied": "تم النسخ!",
-    "noQuestions": "أضف سؤالاً واحداً على الأقل لتوليد المخطط.",
-    "placeholder": "// سيظهر مخطط JSON-LD هنا..."
-  },
   "contentCreatorsTitle": "✍️ لمنشئي المحتوى",
   "contentCreatorsDesc": "يمكن للأدوات المتخصصة في المحتوى مساعدة زوارك في إنشاء محتوى أفضل ورؤية نفسك كمورد قيم.",
-  "headlineAnalyzer": {
-    "title": "محلل العناوين",
-    "description": "يقيم العناوين بناءً على عوامل مثل الطول، توازن الكلمات، المشاعر، والوضوح. يمكن أن يساعد هذا منشئي المحتوى في كتابة عناوين أكثر جاذبية."
-  },
-  "readabilityChecker": {
-    "title": "أداة فحص سهولة القراءة",
-    "description": "يحلل قطعة من النص ويعطيها درجة سهولة قراءة (مثل Flesch-Kincaid). هذا يساعد الكتاب في التأكد من أن محتواهم سهل الفهم لجمهور عريض."
-  },
-  "loremGenerator": {
-    "title": "مولد Lorem Ipsum",
-    "description": "مولد قابل التخصيص للنص البديل. يمكنك أن تجعله ممتعًا بإضافة سمات مختلفة (مثل \"لوريم إيبسوم لبدء الأعمال\"، \"لوريم إيبسوم للمصممين\")."
-  },
   "featuresTitle": "لماذا تستخدم أدوات تحسين محركات البحث لدينا؟",
   "featuresDesc": "تم تصميم أدواتنا لمساعدتك في تحسين موقعك للحصول على نتائج بحث أفضل وتجربة مستخدم.",
   "features": {
@@ -62,7 +15,7 @@
         "description": "جميع أدواتنا مجانية تمامًا ولا تتطلب تسجيل أو تثبيت."
       },
       "fast": {
-        "title": "نتائج سريعة",
+        "title": "نتایج سريعة",
         "description": "احصل على نتائج فورية ورؤى قابلة للتنفيذ لتحسين استراتيجية تحسين محركات البحث الخاصة بك."
       },
       "comprehensive": {
