feat(nav): optimize mobile menu and update navigation translations

--- a/src/i18n/ar/common.json
+++ b/src/i18n/ar/common.json
@@ -20,6 +20,9 @@
   "comingSoon": "قريباً",
   "allServices": "جميع الخدمات",
   "viewDetails": "عرض التفاصيل",
+  "seoServices": "خدمات تحسين محركات البحث",
+  "developmentServices": "خدمات التطوير",
+  "modernWebDevelopment": "تطوير الويب الحديث",
   "sendRequest": "إرسال طلب",
   "cancel": "إلغاء",
   "backToTop": "العودة إلى الأعلى",
