--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -19,6 +19,9 @@
   "comingSoon": "Coming Soon",
   "allServices": "All Services",
   "viewDetails": "View Details",
+  "seoServices": "SEO Services",
+  "developmentServices": "Development Services",
+  "modernWebDevelopment": "Modern Web Development",
   "sendRequest": "Send Request",
   "cancel": "Cancel",
   "backToTop": "Back to Top",
