--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -19,6 +19,9 @@
   "comingSoon": "به زودی",
   "allServices": "همه خدمات",
   "viewDetails": "مشاهده جزئیات",
+  "seoServices": "خدمات سئو",
+  "developmentServices": "خدمات توسعه",
+  "modernWebDevelopment": "توسعه وب مدرن",
   "sendRequest": "ارسال درخواست",
   "cancel": "لغو",
   "backToTop": "بازگشت به بالا",
