feat: Update navigation menu with new service links and UI refinements

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -21,6 +21,7 @@
   "viewDetails": "View Details",
   "seoServices": "SEO Services",
   "developmentServices": "Development Services",
+  "supportServices": "Support & Optimization",
   "modernWebDevelopment": "Modern Web Development",
   "sendRequest": "Send Request",
   "cancel": "Cancel",
