--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -21,6 +21,7 @@
   "viewDetails": "مشاهده جزئیات",
   "seoServices": "خدمات سئو",
   "developmentServices": "خدمات توسعه",
+  "supportServices": "پشتیبانی و بهینه‌سازی",
   "modernWebDevelopment": "توسعه وب مدرن",
   "sendRequest": "ارسال درخواست",
   "cancel": "لغو",
