--- a/src/i18n/ar/common.json
+++ b/src/i18n/ar/common.json
@@ -22,6 +22,7 @@
   "viewDetails": "عرض التفاصيل",
   "seoServices": "خدمات تحسين محركات البحث",
   "developmentServices": "خدمات التطوير",
+  "supportServices": "الدعم والتحسين",
   "modernWebDevelopment": "تطوير الويب الحديث",
   "sendRequest": "إرسال طلب",
   "cancel": "إلغاء",
