fix: resolve breadcrumb translations and missing common keys

--- a/src/i18n/ar/common.json
+++ b/src/i18n/ar/common.json
@@ -63,5 +63,7 @@
   "copyright": "© {year} وب أي بي سي. جميع الحقوق محفوظة.",
   "privacyPolicy": "سياسة الخصوصية",
   "termsOfService": "شروط الخدمة",
-  "cookiePolicy": "سياسة الكوكيز"
+  "cookiePolicy": "سياسة الكوكيز",
+  "whyChooseUs": "لماذا تختارنا",
+  "howItWorks": "كيف نعمل"
 }
