--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -63,5 +63,7 @@
   "copyright": "© {year} WebABC. All rights reserved.",
   "privacyPolicy": "Privacy Policy",
   "termsOfService": "Terms of Service",
-  "cookiePolicy": "Cookie Policy"
+  "cookiePolicy": "Cookie Policy",
+  "whyChooseUs": "Why Choose Us",
+  "howItWorks": "How It Works"
 }
