--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -63,5 +63,7 @@
   "copyright": "© {year} وب‌اِی‌بی‌سی. تمامی حقوق محفوظ است.",
   "privacyPolicy": "سیاست حفظ حریم خصوصی",
   "termsOfService": "شرایط استفاده",
-  "cookiePolicy": "سیاست کوکی"
+  "cookiePolicy": "سیاست کوکی",
+  "whyChooseUs": "چرا ما را انتخاب کنید",
+  "howItWorks": "مراحل کار"
 }
