feat(maintenance): extend content and fix image path

--- a/src/i18n/ar/maintenance.json
+++ b/src/i18n/ar/maintenance.json
@@ -1,22 +1,58 @@
 {
-    "title": "صيانة الموقع",
-    "subtitle": "موقع آمن ومحدث",
-    "description": "خطط رعاية شاملة للحفاظ على أمان وسرعة موقعك.",
+    "title": "صيانة الموقع وخطط الرعاية",
+    "subtitle": "موقع آمن، سريع، ومتوفر دائماً – لتركز أنت على نمو أعمالك.",
+    "description": "لا تدع المشاكل التقنية توقفك. تضمن خطط الرعاية المتميزة لدينا بقاء موقعك آمناً ومحدثاً ومحسناً بينما تركز أنت على إدارة وتنمية مشروعك.",
     "features": [
-        "تحديثات أسبوعية للإضافات",
-        "نسخ احتياطي سحابي يومي",
-        "مراقبة وقت التشغيل",
-        "فحص الأمان",
-        "تحديثات المحتوى"
+        "مراقبة أمنية وتنظيف البرمجيات الخبيثة 24/7",
+        "تحديثات أسبوعية آمنة (النواة، القالب، الإضافات)",
+        "نسخ احتياطي يومي سحابي (خارجي)",
+        "تحسين الأداء ومراقبة وقت التشغيل (Uptime)",
+        "دعم فني ذو أولوية وتعديلات المحتوى"
     ],
+    "benefits": {
+        "0": {
+            "title": "راحة بال تامة",
+            "description": "لا تقلق أبداً بشأن تعطل موقعك أو اختراقه. نحن نتولى جميع الأمور التقنية لتنام قرير العين."
+        },
+        "1": {
+            "title": "زيادة الإيرادات",
+            "description": "الموقع السريع والمتوفر دائماً يحقق مبيعات أكثر. تضمن تحسيناتنا أن لا تفقد أي عميل بسبب مشاكل تقنية."
+        },
+        "2": {
+            "title": "حماية سمعتك",
+            "description": "الخروقات الأمنية تدمر الثقة. نحن نحافظ على سلامة بيانات عملائك وسمعة علامتك التجارية بأمان عالي المستوى."
+        },
+        "3": {
+            "title": "توفير الوقت والمال",
+            "description": "توظيف مطور لإصلاحات فردية مكلف. توفر خططنا فريقاً تقنياً مخصصاً بجزء بسيط من التكلفة."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "التهيئة والتدقيق",
+            "description": "نقوم بتحليل موقعك، وأخذ نسخ احتياطية كاملة، وإصلاح أي مشاكل فورية للبدء من صفحة نظيفة."
+        },
+        "1": {
+            "title": "التحسين الأولي",
+            "description": "ننفذ التخزين المؤقت، وجدران الحماية الأمنية، وتحسينات السرعة لتعزيز الأداء والأمان فوراً."
+        },
+        "2": {
+            "title": "الروتين الأسبوعي",
+            "description": "كل أسبوع، نفحص موقعك بصرياً، ونجري تحديثات آمنة، ونشغل النسخ الاحتياطي السحابي."
+        },
+        "3": {
+            "title": "التقارير الشهرية",
+            "description": "تتلقى تقرير PDF مفصل يوضح بالضبط ما قمنا به، ووقت التشغيل، والحالة الأمنية."
+        }
+    },
     "faq": {
-        "q1": "ماذا تتضمن خطة الصيانة؟",
-        "a1": "تتضمن خطتنا تحديثات أسبوعية للإضافات والقوالب ونواة ووردبريس، ونسخًا احتياطيًا سحابيًا يوميًا، ومراقبة على مدار الساعة، وفحوصات أمنية، وتحديثات طفيفة للمحتوى.",
-        "q2": "هل أحتاج حقًا إلى خطة صيانة؟",
-        "a2": "نعم. تمامًا كما تحتاج السيارة إلى تغيير الزيت، يحتاج الموقع إلى صيانة. بدونها، يصبح موقعك عرضة للمخترقين، وبطيئًا، وقد يتعطل.",
-        "q3": "هل يمكنني الإلغاء في أي وقت؟",
-        "a3": "بالتأكيد. نحن نؤمن بكسب ثقتك كل شهر. لا توجد عقود طويلة الأجل.",
-        "q4": "ماذا لو تم اختراق موقعي؟",
-        "a4": "إذا كنت مشتركًا في خطة الصيانة الخاصة بنا، فسنقوم بإصلاح موقعك المخترق مجانًا. نحن نأخذ منع حدوث ذلك على محمل الجد."
+        "q1": "ما الذي تشمله خطة الرعاية عادةً؟",
+        "a1": "تغطي خطتنا الشاملة كل ما يلزم للحفاظ على صحة موقعك. يشمل ذلك تحديثات أسبوعية لجميع البرمجيات، ونسخاً احتياطياً يومياً على سحابة آمنة، وفحصاً أمنياً في الوقت الفعلي، ومراقبة عمل الموقع، ودعماً فنياً ذا أولوية. اعتبرها بمثابة بوليصة تأمين وفريق تقني مخصص لموقعك.",
+        "q2": "لماذا أحتاج إلى خطة صيانة؟",
+        "a2": "المواقع هي برمجيات معقدة تتطلب رعاية مستمرة. بدون التحديثات المنتظمة، تصبح المواقع عرضة للاختراق، أو البطء، أو التوقف الكامل. تمنع خطتنا هذه الكوارث المكلفة، مما يمنحك راحة البال ويضمن أن واجهتك الرقمية مفتوحة دائماً للأعمال.",
+        "q3": "هل أنا مقيد بعقد طويل الأجل؟",
+        "a3": "كلا. نحن نؤمن بكسب ثقتك في كل شهر. خططنا شهرية، ويمكنك الإلغاء في أي وقت بشكل قانوني وبدون تعقيدات. نريد أن تبقى لأنك تحب الخدمة، وليس لأنك مضطر لذلك.",
+        "q4": "ماذا يحدث إذا تم اختراق موقعي أثناء اشتراكي؟",
+        "a4": "في الحالة المستبعدة لتعرض موقعك للاختراق وهو تحت رعايتنا، سنقوم بتنظيفه واستعادته بالكامل مجاناً. نحن نتحمل المسؤولية الكاملة عن أمن موقعك حتى لا تضطر للقلق بشأن ذلك."
     }
 }
