--- a/src/i18n/fa/maintenance.json
+++ b/src/i18n/fa/maintenance.json
@@ -3,12 +3,48 @@
     "subtitle": "وب‌سایت امن و به‌روز",
     "description": "خدمات پشتیبانی جامع برای امنیت و سرعت سایت شما.",
     "features": [
-        "به‌روزرسانی هفتگی افزونه‌ها",
-        "پشتیبان‌گیری ابری روزانه",
-        "مانیتورینگ آپ‌تایم",
-        "اسکن امنیتی",
-        "به‌روزرسانی محتوا"
+        "مانیتورینگ امنیتی ۲۴/۷ و پاکسازی بدافزار",
+        "به‌روزرسانی هفتگی ایمن (هسته، قالب، افزونه‌ها)",
+        "پشتیبان‌گیری ابری روزانه (خارج از هاست)",
+        "بهینه‌سازی عملکرد و مانیتورینگ آپ‌تایم",
+        "پشتیبانی اولویت‌دار و تغییرات محتوایی"
     ],
+    "benefits": {
+        "0": {
+            "title": "آرامش خیال کامل",
+            "description": "دیگر نگران خرابی یا هک شدن سایت نباشید. ما تمام امور فنی را مدیریت می‌کنیم تا شما با خیالی آسوده بخوابید."
+        },
+        "1": {
+            "title": "انفجار درآمد",
+            "description": "یک سایت سریع و همیشه فعال، فروش بیشتری دارد. بهینه‌سازی‌های ما تضمین می‌کنند که هرگز مشتری را از دست ندهید."
+        },
+        "2": {
+            "title": "حفاظت از اعتبار برند",
+            "description": "نقض امنیتی اعتماد مشتری را نابود می‌کند. ما با امنیت نظامی از داده‌های کاربران و اعتبار برند شما محافظت می‌کنیم."
+        },
+        "3": {
+            "title": "صرفه‌جویی در زمان و هزینه",
+            "description": "استخدام توسعه‌دهنده برای هر مشکل کوچک گران است. طرح‌های ما یک تیم فنی اختصاصی را با هزینه‌ای ناچیز در اختیار شما می‌گذارند."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "آنبوردینگ و ممیزی",
+            "description": "ما سایت شما را تحلیل می‌کنیم، بک‌آپ کامل می‌گیریم و مشکلات فوری را رفع می‌کنیم تا شروعی پاک داشته باشیم."
+        },
+        "1": {
+            "title": "بهینه‌سازی اولیه",
+            "description": "ما کشینگ، فایروال‌های امنیتی و ترفندهای سرعت را پیاده‌سازی می‌کنیم تا امنیت و سرعت فوراً افزایش یابد."
+        },
+        "2": {
+            "title": "روتین هفتگی",
+            "description": "هر هفته، سایت شما را بازرسی چشمی می‌کنیم، به‌روزرسانی‌های ایمن را انجام می‌دهیم و بک‌آپ ابری می‌گیریم."
+        },
+        "3": {
+            "title": "گزارش‌دهی ماهانه",
+            "description": "شما یک گزارش PDF دریافت می‌کنید که دقیقاً کارهای انجام شده، آپ‌تایم و وضعیت امنیتی را نشان می‌دهد."
+        }
+    },
     "faq": {
         "q1": "برنامه نگهداری شامل چه مواردی است؟",
         "a1": "برنامه ما شامل به‌روزرسانی هفتگی افزونه‌ها، قالب‌ها و هسته وردپرس، پشتیبان‌گیری روزانه در فضای ابری، مانیتورینگ ۲۴/۷، اسکن امنیتی و تغییرات جزئی محتوا است.",
