feat(speed-opt): extend content and fix image path

--- a/src/i18n/ar/speed-optimization.json
+++ b/src/i18n/ar/speed-optimization.json
@@ -3,12 +3,48 @@
     "subtitle": "تعزيز السرعة و Core Web Vitals",
     "description": "تحسين وقت التحميل واجتياز تقييمات مؤشرات الويب الحيوية.",
     "features": [
-        "تحسين الصور",
-        "ضغط الكود",
-        "إعداد التخزين المؤقت",
-        "تحسين قاعدة البيانات",
-        "إعداد CDN"
+        "إعداد متقدم للذاكرة المؤقتة (Caching) و CDN",
+        "ضغط الصور وتنسيقات الجيل الجديد (WebP)",
+        "تصغير الأكواد (CSS/JS/HTML)",
+        "تنظيف وتحسين قاعدة البيانات",
+        "اجتياز تقييم Core Web Vitals"
     ],
+    "benefits": {
+        "0": {
+            "title": "تصدر نتائج جوجل",
+            "description": "جوجل يفضل المواقع السريعة بشكل صريح. اجتياز مؤشرات الويب الأساسية هو إشارة ترتيب مباشرة ترفعك فوق المنافسين."
+        },
+        "1": {
+            "title": "زيادة معدل التحويل",
+            "description": "تأخير ثانية واحدة يقلل التحويلات بنسبة 7%. السرعة هي أبسط طريقة لزيادة المبيعات دون إنفاق المزيد على الإعلانات."
+        },
+        "2": {
+            "title": "تجربة مستخدم أفضل",
+            "description": "المستخدمون يكرهون الانتظار. الموقع السريع يبقي الزوار متفاعلين، ويقلل معدل الارتداد (Bounce Rate)، ويبني الثقة."
+        },
+        "3": {
+            "title": "توفير تكاليف الاستضافة",
+            "description": "الكود المحسن يستهلك موارد أقل. هذا يعني أن موقعك يمكنه التعامل مع حركة مرور أكبر دون الحاجة لترقيات خادم باهظة."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "تدقيق الأداء العميق",
+            "description": "نحلل كل ملف وسكريبت واستعلام للعثور بدقة على ما يبطئ موقعك، ونضع درجة الأساس."
+        },
+        "1": {
+            "title": "تحسين الكود والأصول",
+            "description": "نقوم بتصغير الأكواد، وضغط الصور، وتأجيل السكريبتات غير الضرورية لجعل التحميل الأولي فورياً."
+        },
+        "2": {
+            "title": "ضبط الخادم (Server)",
+            "description": "نقوم بإعداد التخزين المؤقت المتقدم (Redis/Varnish) وشبكات CDN لتوصيل المحتوى من أقرب نقطة للمستخدم."
+        },
+        "3": {
+            "title": "التحقق والتقارير",
+            "description": "نعيد الاختبار باستخدام أدوات جوجل ونسلمك تقرير ما قبل وبعد يثبت مكاسب السرعة."
+        }
+    },
     "faq": {
         "q1": "ما مدى سرعة موقعي؟",
         "a1": "نطمح للحصول على درجات 90+ في Google PageSpeed Insights ووقت تحميل أقل من ثانيتين. ومع ذلك، تعتمد النتائج على الاستضافة وتعقيد الموقع.",
