--- a/src/i18n/fa/speed-optimization.json
+++ b/src/i18n/fa/speed-optimization.json
@@ -1,22 +1,58 @@
 {
-    "title": "بهینه‌سازی سرعت",
-    "subtitle": "افزایش سرعت و Core Web Vitals",
-    "description": "بهینه‌سازی زمان بارگذاری و پاس کردن شاخص‌های حیاتی وب.",
+    "title": "بهینه‌سازی سرعت و Core Web Vitals",
+    "subtitle": "سرعت برق‌آسا برای سئو بهتر و فروش بیشتر.",
+    "description": "سایت کند یعنی از دست دادن پول. ما کدها، تصاویر و سرور شما را بهینه می‌کنیم تا به امتیاز ۹۰+ گوگل برسید و رتبه سئو خود را متحول کنید.",
     "features": [
-        "بهینه‌سازی تصاویر",
-        "فشرده‌سازی کد",
-        "پیکربندی کش",
-        "بهینه‌سازی پایگاه داده",
-        "راه‌اندازی CDN"
+        "پیکربندی پیشرفته کش و CDN",
+        "فشرده‌سازی تصاویر و فرمت‌های مدرن (WebP)",
+        "مینیفای کردن کدها (CSS/JS/HTML)",
+        "پاکسازی و بهینه‌سازی دیتابیس",
+        "تضمین پاس کردن Core Web Vitals"
     ],
+    "benefits": {
+        "0": {
+            "title": "رتبه بهتر در گوگل",
+            "description": "گوگل صراحتاً سایت‌های سریع‌تر را ترجیح می‌دهد. پاس کردن Core Web Vitals یک سیگنال مستقیم برای پیشی گرفتن از رقباست."
+        },
+        "1": {
+            "title": "افزایش نرخ تبدیل",
+            "description": "یک ثانیه تأخیر نرخ تبدیل را ۷٪ کاهش می‌دهد. سرعت، ساده‌ترین راه برای افزایش فروش بدون هزینه تبلیغات بیشتر است."
+        },
+        "2": {
+            "title": "تجربه کاربری بهتر",
+            "description": "کاربران از انتظار متنفرند. یک سایت چابک بازدیدکنندگان را درگیر نگه می‌دارد، نرخ پرش را کم می‌کند و اعتماد می‌سازد."
+        },
+        "3": {
+            "title": "صرفه‌جویی در هزینه هاست",
+            "description": "کد بهینه منابع کمتری مصرف می‌کند. این یعنی سایت شما می‌تواند ترافیک بیشتری را بدون نیاز به ارتقای گران‌قیمت سرور مدیریت کند."
+        }
+    },
+    "process": {
+        "0": {
+            "title": "ممیزی دقیق عملکرد",
+            "description": "ما هر فایل، اسکریپت و کوئری را تحلیل می‌کنیم تا دقیقاً بفهمیم چه چیزی سرعت را کم کرده و امتیاز پایه را ثبت می‌کنیم."
+        },
+        "1": {
+            "title": "بهینه‌سازی کد و دارایی‌ها",
+            "description": "ما کدها را مینیفای، تصاویر را فشرده و اسکریپت‌های غیرضروری را به تعویق می‌اندازیم تا لود اولیه آنی شود."
+        },
+        "2": {
+            "title": "تنظیمات سمت سرور",
+            "description": "ما کشینگ پیشرفته (Redis/Varnish) و CDN را تنظیم می‌کنیم تا محتوا از نزدیک‌ترین نقطه به کاربر لود شود."
+        },
+        "3": {
+            "title": "تست نهایی و گزارش",
+            "description": "ما مجدداً با ابزارهای گوگل تست می‌گیریم و گزارش قبل و بعد را که بهبود سرعت را ثابت می‌کند، ارائه می‌دهیم."
+        }
+    },
     "faq": {
-        "q1": "سایت من چقدر سریع خواهد شد؟",
-        "a1": "ما هدف‌گذاری نمره ۹۰+ در Google PageSpeed Insights و زمان بارگذاری زیر ۲ ثانیه را داریم. البته نتایج به هاست و پیچیدگی سایت شما بستگی دارد.",
-        "q2": "آیا این یک سرویس یک‌بار انجام است؟",
-        "a2": "بله، بهینه‌سازی یک پروژه یک‌باره است. با این حال، اضافه کردن محتوای غیربهینه در آینده می‌تواند دوباره آن را کند کند.",
-        "q3": "آیا به دسترسی هاست نیاز دارید؟",
-        "a3": "بله، ما معمولاً به دسترسی FTP/SFTP و دسترسی ادمین به پنل وردپرس یا سرور شما نیاز داریم.",
-        "q4": "آیا این طرح سایت من را بهم می‌ریزد؟",
-        "a4": "ما با دقت عمل می‌کنیم تا اطمینان حاصل کنیم بهینه‌سازی‌ها بر ظاهر سایت تأثیر نمی‌گذارند. ما همه چیز را ابتدا در محیط تست بررسی می‌کنیم."
+        "q1": "سایت من چقدر سریع‌تر خواهد شد؟",
+        "a1": "اگرچه هر سایتی شرایط خاص خود را دارد، ما پیشرفت چشمگیر را تضمین می‌کنیم. هدف ما کسب امتیاز سبز (۹۰+) در گوگل PageSpeed و لود تایم زیر ۲ ثانیه است. این بهبود برای تجربه کاربری و رتبه شما در گوگل حیاتی است.",
+        "q2": "آیا این یک سرویس یک‌باره است؟",
+        "a2": "بله، بهینه‌سازی فنی ما یک پروژه کامل و یک‌باره است که زیرساخت سایت را اصلاح می‌کند. البته برای حفظ این سرعت در درازمدت با افزودن محتوای جدید، سرویس‌های نگهداری ما پیشنهاد می‌شود.",
+        "q3": "آیا ظاهر سایتم بهم می‌ریزد؟",
+        "a3": "هرگز. ما با دقت وسواس‌گونه کار می‌کنیم و تمام تغییرات را ابتدا روی نسخه تستی (Staging) اعمال می‌کنیم. ما تضمین می‌کنیم که طراحی و عملکرد سایت شما دست‌نخورده باقی می‌ماند، فقط بسیار سریع‌تر می‌شود.",
+        "q4": "آیا نیاز به دسترسی هاست دارید؟",
+        "a4": "بله، برای انجام بهینه‌سازی‌های عمیق، ما به دسترسی مدیریت وردپرس و کنترل پنل هاست (یا FTP) نیاز داریم. ما با بالاترین استانداردهای امنیتی از اطلاعات شما حفاظت می‌کنیم."
     }
 }
